--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,8 @@
 
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/employees">Employees</a>
+          <a class="nav-link" href="/employees">Employees</a> |
+          <a class="nav-link" href="/products">Products</a>
         </li>
       ...
       </ul>
