Searchkick implementation on name filtered by year greater than 2000

--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :address %>
   </div>
 
+  <div class="field">
+    <%= form.label :doj %>
+    <%= form.text_field :doj %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
