--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,11 +1,17 @@
 <h1>Employees</h1>
 
+<%= form_tag employees_path, method: :get do %>
+<%= text_field_tag :search_query,@q,id: 'employees_search', autocomplete: :off %>
+<%= submit_tag("Search",name: nil) %>
+<% end %>
+
 <table>
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
       <th>Address</th>
+      <th>Date Of Joining</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +22,7 @@
         <td><%= employee.name %></td>
         <td><%= employee.email %></td>
         <td><%= employee.address %></td>
+        <td><%= employee.doj %></td>
         <td><%= link_to 'Show', employee %></td>
         <td><%= link_to 'Edit', edit_employee_path(employee) %></td>
         <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
