--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: employee) do |form| %>
+<%= form_for(employee) do |form| %>
   <% if employee.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(employee.errors.count, "error") %> prohibited this employee from being saved:</h2>
@@ -30,6 +30,13 @@
     <%= form.label :doj %>
     <%= form.text_field :doj %>
   </div>
+
+  <div class="field">
+    <%= form.label :department_id %>
+    <%= form.select :department_id,options_from_collection_for_select(@departments,"id","name")%>
+  </div>
+
+
 
   <div class="actions">
     <%= form.submit %>
