--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -8,21 +8,25 @@
 <table>
   <thead>
     <tr>
+      <th>S.No.</th>
       <th>Name</th>
       <th>Email</th>
       <th>Address</th>
       <th>Date Of Joining</th>
+      <th>Department</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @employees.each do |employee| %>
+    <% @employees.each_with_index do |employee,index| %>
       <tr>
+        <td><%= index+1 %></td>
         <td><%= employee.name %></td>
         <td><%= employee.email %></td>
         <td><%= employee.address %></td>
         <td><%= employee.doj %></td>
+        <td><%= employee.department.name %></td>
         <td><%= link_to 'Show', employee %></td>
         <td><%= link_to 'Edit', edit_employee_path(employee) %></td>
         <td><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
