--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,8 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/employees">Employees</a> |
-          <a class="nav-link" href="/products">Products</a>
+          <a class="nav-link" href="/products">Products</a>   |
+          <a class="nav-link" href="/departments">Departments</a>
         </li>
       ...
       </ul>
